# timus

./: .gitignore  CMakeLists.txt  README.md  clean.sh
src/: CMakeLists.txt
src/0000/: main.c  main.cpp  run.sh
src/1000/: main.cpp  readme
src/1001/: main.cpp  readme
src/1002/: main.cpp  readme  test.cin
src/1003/: readme
src/1011/: main.c  main_fp.c  readme
src/1025/: main.cpp  readme  test.cin
src/1068/: main.cpp  readme
src/1083/: main.cpp  readme  test.cin  test.cout
src/1100/: generate_test.sh  main.cpp  main_fast.cpp  main_stable_sort.cpp  readme
src/1110/: main.cpp  readme
src/1119/: main.cpp  main_dijkstra.cpp  readme  run.sh
src/1120/: main.c  readme
src/1131/: main.c  readme
src/1146/: main.c  main.cpp  readme
src/1149/: main.c  readme  test.cout
src/1194/: main.cpp  readme
src/1196/: main.cpp  main_bs.cpp  main_bs_wo_stl.cpp  readme
src/1197/: main.cpp  readme
src/1209/: main.cpp  readme
src/1224/: main.cpp  readme
src/1225/: main.cpp  readme
src/1243/: main.cpp  main.py  main_simple.cpp  readme
src/1263/: main.cpp  readme
src/1264/: main.cpp  readme
src/1290/: main.cpp  main.py  readme
src/1293/: main.cpp  readme
src/1296/: main.c  readme  run.sh
src/1297/: main.cpp
src/1313/: main.cpp  readme
src/1319/: main.cpp  readme  test.cout
src/1322/: main.cpp  readme
src/1327/: main.cpp  readme
src/1349/: main.cpp  readme
src/1404/: main.cpp  readme
src/1409/: main.cpp  readme
src/1446/: main.c  main.cpp  readme
src/1457/: main.cpp  readme  test.cin  test.cout
src/1493/: main.cpp  readme
(+151 files in other folders)
